Fix sidebar padding adjustment so it won't move too much on hover

--- a/src/styles/subsocial.scss
+++ b/src/styles/subsocial.scss
@@ -1452,6 +1452,18 @@ hr {
   color: rgba(0, 0, 0, .85);
 }
 .DfMenuItem {
+  @media (min-width: 992px) { 
+    &.ant-menu-item, .ant-menu-submenu-title {
+      padding-left: 32px !important;
+    }
+    ul .DfMenuItem {
+      padding-left: 56px !important;
+    }
+    .anticon {
+      font-size: 1rem;
+    }
+  }
+
   img{
     transition: filter 0.3s;
     filter: grayscale(1) opacity(0.7);
